--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.0.0
+  dotenv: ^4.0.0
   json_serializable: ^6.0.0
   lints: ^1.0.0
   meta: ^1.0.0
