--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,5 +4,6 @@ linter:
   rules:
     always_use_package_imports: true
     library_private_types_in_public_api: true
+    prefer_single_quotes: true
     sort_pub_dependencies: true
     type_annotate_public_apis: true
