--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -19,7 +19,16 @@ jobs:
       - name: Run code generation
         run: dart run build_runner build
       - name: Run tests
-        run: dart test
+        run: dart test --coverage=.coverage
+      - name: Install coverage package
+        run: dart pub global activate coverage
+      - name: Convert to LCOV
+        run: dart pub global run coverage:format_coverage --report-on=lib --lcov -o ./.coverage/lcov.info -i ./.coverage
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: .coverage/lcov.info
 
   check_format:
     name: Check Format
