--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -19,7 +19,14 @@ jobs:
       - name: Run code generation
         run: dart run build_runner build
       - name: Run tests
-        run: dart test --coverage=.coverage
+        run: dart test --file-reporter github:test-results.json --coverage=.coverage
+      - name: Upload test report
+        uses: dorny/test-reporter@v1
+        if: success() || failure()
+        with:
+          name: Unit Tests
+          path: test-results.json
+          reporter: dart-json
       - name: Install coverage package
         run: dart pub global activate coverage
       - name: Convert to LCOV
@@ -42,11 +49,18 @@ jobs:
       - name: Run code generation
         run: dart run build_runner build
       - name: Run tests
-        run: dart test -P integration --coverage=.coverage
+        run: dart test -P integration --file-reporter github:test-results.json --coverage=.coverage
         env:
           CLIENT_ID: ${{ secrets.SPOTIFY_CLIENT_ID }}
           CLIENT_SECRET: ${{ secrets.SPOTIFY_CLIENT_SECRET }}
           REFRESH_TOKEN: ${{ secrets.SPOTIFY_REFRESH_TOKEN }}
+      - name: Upload test report
+        uses: dorny/test-reporter@v1
+        if: success() || failure()
+        with:
+          name: Integration Tests
+          path: test-results.json
+          reporter: dart-json
       - name: Install coverage package
         run: dart pub global activate coverage
       - name: Convert to LCOV
