--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: spotify_api
-version: 0.1.0-alpha.3
+version: 0.2.0-alpha
 homepage: https://github.com/BjoernPetersen/spotify_api
 description: A wrapper for the Spotify Web API, implemented in pure Dart.
 
