--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: spotify_api
 version: 0.6.0-alpha
 homepage: https://github.com/BjoernPetersen/spotify_api
-description: A wrapper for the Spotify Web API, implemented in Dart.
+description: >
+  A wrapper for the Spotify Web API, implemented in Dart. Available on all Dart platforms.
 
 environment:
   sdk: ^3.0.0
