--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -10,10 +10,10 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
-    container: dart:3.0
     steps:
       - name: Check out repo
         uses: actions/checkout@v3
+      - uses: asdf-vm/actions/install@v2
       - name: Get dependencies
         run: dart pub get
       - name: Run code generation
@@ -40,10 +40,10 @@ jobs:
   integration_test:
     name: Integration Tests
     runs-on: ubuntu-latest
-    container: dart:3.0
     steps:
       - name: Check out repo
         uses: actions/checkout@v3
+      - uses: asdf-vm/actions/install@v2
       - name: Get dependencies
         run: dart pub get
       - name: Run code generation
@@ -74,10 +74,10 @@ jobs:
   check_format:
     name: Check Format
     runs-on: ubuntu-latest
-    container: dart:3.0
     steps:
       - name: Check out repo
         uses: actions/checkout@v3
+      - uses: asdf-vm/actions/install@v2
       - name: Check lib formatting
         run: dart format lib --set-exit-if-changed
       - name: Check test formatting
@@ -88,10 +88,10 @@ jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
-    container: dart:3.0
     steps:
       - name: Check out repo
         uses: actions/checkout@v3
+      - uses: asdf-vm/actions/install@v2
       - name: Get dependencies
         run: dart pub get
       - name: Run code generation
