--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -32,6 +32,7 @@ jobs:
 
   integration_test:
     name: Integration Tests
+    concurrency: integration
     runs-on: ubuntu-latest
     steps:
       - name: Check out repo
