--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -7,6 +7,9 @@ on:
 
 
 jobs:
+  validate-renovate-config:
+    uses: BlindfoldedSurgery/renovate-config/.github/workflows/validate.yml@main
+
   test:
     name: Test
     runs-on: ubuntu-latest
