--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: spotify_api
-version: 0.5.1-alpha
+version: 1.0.0
 homepage: https://github.com/BjoernPetersen/spotify_api
 description: >
   A wrapper for the Spotify Web API, implemented in Dart. Available on all Dart platforms.
