--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ build-backend = "poetry.core.masonry.api"
 version_provider = "poetry"
 version_scheme = "semver"
 version_files = [
-    "pubspec.yaml"
+    "pubspec.yaml:version"
 ]
 changelog_incremental = true
 update_changelog_on_bump = true
