--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ description = "Repository tooling for spotify_api"
 version = "1.1.2"
 authors = ["Björn Petersen <git@bjoernpetersen.net>"]
 license = "MIT"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "~3.12"
