--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,6 @@ dev_dependencies:
   file_testing: ^3.0.0
   json_serializable: ^6.0.0
   lints: ^4.0.0
-  sane_uuid: ^1.0.0-alpha.4
+  sane_uuid: ^1.0.0
   shelf: ^1.4.0
   test: ^1.0.0
