--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v4
       - uses: jdx/mise-action@v2
         with:
-          log_level: debug
+          cache: false
       - name: Get dependencies
         run: dart pub get
       - name: Run code generation
@@ -41,6 +41,7 @@ jobs:
           files: .coverage/lcov.info
 
   integration_test:
+    if: false
     name: Integration Tests
     concurrency: integration
     runs-on: ubuntu-latest
@@ -48,6 +49,8 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v4
       - uses: jdx/mise-action@v2
+        with:
+          cache: false
       - name: Get dependencies
         run: dart pub get
       - name: Run code generation
@@ -75,6 +78,8 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v4
       - uses: jdx/mise-action@v2
+        with:
+          cache: false
       - name: Check lib formatting
         run: dart format lib --set-exit-if-changed
       - name: Check test formatting
@@ -89,6 +94,8 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v4
       - uses: jdx/mise-action@v2
+        with:
+          cache: false
       - name: Get dependencies
         run: dart pub get
       - name: Run code generation
