--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -18,6 +18,7 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+    if: false
     steps:
       - name: Check out repo
         uses: actions/checkout@v4
@@ -44,6 +45,7 @@ jobs:
     name: Integration Tests
     concurrency: integration
     runs-on: ubuntu-latest
+    if: false
     steps:
       - name: Check out repo
         uses: actions/checkout@v4
